--- a/MyHostel_Admin/Pages/Admin_Page/Members/Details.cshtml
+++ b/MyHostel_Admin/Pages/Admin_Page/Members/Details.cshtml
@@ -308,7 +308,7 @@
                             <div class="row gutters">
                                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                                     <div class="text-right">
-                                        <button class="btn btn-danger"><a asp-page="/Admin_Page/Members/Index">Back to List</a></button>
+                                        <button class="btn btn-primary"><a asp-page="/Admin_Page/Members/Index" style="color:white">Back to List</a></button>
                                     </div>
                                 </div>
                             </div>
