--- a/MyHostel_Admin/Pages/Admin_Page/Hostels/Cancel.cshtml
+++ b/MyHostel_Admin/Pages/Admin_Page/Hostels/Cancel.cshtml
@@ -23,11 +23,35 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Hostel.Name)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Hostel.DetailLocation)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Hostel.DetailLocation)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Hostel.Price)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Hostel.Price)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Hostel.Capacity)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Hostel.Capacity)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Hostel.Description)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Hostel.Description)
+        </dd>
     </dl>
 
     <form method="post">
         <input type="hidden" asp-for="@Model.Hostel.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <button class="btn btn-danger" ><a asp-page="/Admin_Page/Hostels/Index">Back to List</a></button>
+        <input type="submit" value="Delete" class="btn btn-primary" style="color:white" /> |
+        <button class="btn btn-primary" ><a asp-page="/Admin_Page/Hostels/Index" style="color:white">Back to List</a></button>
     </form>
 </div>
