--- a/MyHostel_Admin/Pages/Admin_Page/Members/Index.cshtml
+++ b/MyHostel_Admin/Pages/Admin_Page/Members/Index.cshtml
@@ -83,7 +83,7 @@
                                     } @typeOfUser
                                 </td>
                                 <td>
-                                    <a asp-page="./Details" asp-route-id="@item.Id">Details</a>
+                                    <button class="btn btn-primary"><a asp-page="./Details" asp-route-id="@item.Id" style="color:white">Details</a></button>
                                 </td>
                             </tr>
                         }
