--- a/MyHostel_Admin/Pages/Shared/_LayoutAdmin.cshtml
+++ b/MyHostel_Admin/Pages/Shared/_LayoutAdmin.cshtml
@@ -23,14 +23,14 @@
         <div class="sidenav-header">
 
             <img src="~/admin/img/logo-ct.png" class="navbar-brand-img h-100" alt="main_logo">
-            <span class="ms-1 font-weight-bold text-white" style="color: orangered !important;">ADMIN DASHBOARD </span>
+            <span class="ms-1 font-weight-bold text-white" style="color: orangered !important;">myHostel </span>
 
         </div>
         <hr class="horizontal light mt-0 mb-2">
         <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link text-white active bg-gradient-primary" asp-page="/Admin_Page/Index">
+                    <a class="nav-link text-white " asp-page="/Admin_Page/Index">
                         <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                             <i class="material-icons opacity-10">dashboard</i>
                         </div>
@@ -98,11 +98,7 @@
                
             </ul>
         </div>
-        <div class="sidenav-footer position-absolute w-100 bottom-0 ">
-            <div class="mx-3">
-                <a class="btn bg-gradient-primary mt-4 w-100" href="" type="button">Back to Home</a>
-            </div>
-        </div>
+        
     </aside>
     <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
         <!-- Navbar -->
@@ -112,7 +108,7 @@
                     <div class="ms-md-auto pe-md-3 d-flex align-items-center">
                         <div class="input-group input-group-outline">
                             <label class="form-label">Type here...</label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" readonly>
                         </div>
                     </div>
                     @{
